prod/external-dns/yaml/service-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: stage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: stage
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: stage
  annotations:
    # kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /index.html
    alb.ingress.kubernetes.io/security-groups: sg-0e17f20a94858eb5e
    alb.ingress.kubernetes.io/actions.nginx-test: >
      {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"nginx","servicePort":"80","weight":100}
    #dns생성을 위해 필요한 부분. 아래 host로 해결되나?
    external-dns.alpha.kubernetes.io/hostname: nginx.oshyun.com
spec:
  ingressClassName: alb
  rules:
    - host: nginx.oshyun.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
